Finalising the build

--- a/index.html
+++ b/index.html
@@ -16,14 +16,37 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="#">Place an Order</a></li>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="index.html">Place an Order</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
 
         </ul>
     </nav>
     </header>
     <main>
+        <p>
+            Hey There...<br>
+            Coffee? No Worries!<br>
+            We have the best blends of your favourite coffee! Simply make a choice and place and order!
+        </p>
+        <section id="coffee">
+            <div>
+                <img src="image/latte.png" alt="latte">
+                <p>Latte</p>
+                <p><a href="contact.html">Buy</a></p>
+            </div>
+
+            <div>
+                <img src="image/cola.png" alt="latte">
+                <p>Cappuchino</p>
+                <p><a href="contact.html">Buy</a></p>
+            </div>
+
+            <div>
+                <img src="image/latte.png" alt="latte">
+                <p>Coffee Cola</p>
+                <p><a href="contact.html">Buy</a></p>
+        </div>
+        </section>
     </main>
 
 </div>
